--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
-body, html {
-  font: 14px/21px OpenSansR;
+body,
+html {
+  font: 14px/21px 'OpenSansR', sans-serif;
   width: 100%;
   overflow-x: hidden;
 }
@@ -14,7 +15,6 @@ img {
 
 h1 {
   font-size: 2.4rem;
-  font-family: OpenSansR;
 }
 
 h2 {
@@ -45,8 +45,9 @@ button:focus {
 
 .navbar {
   background: #FDFDFD;
-  font-family: OpenSansL;
+  font-family: 'OpenSansL', sans-serif;
   font-size: 16px;
+  z-index: 1;
 }
 
 header hr {
@@ -82,16 +83,16 @@ header hr {
 
 /* home-section  */
 
-#homepage {
+.home-section {
   padding-top: 30%;
 }
 
-#homepage .section1 {
+.home-section .section1 {
   background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/v1532938063/genadi/homePage/genadi.png');
   background-size: cover;
 }
 
-#homepage h1 {
+.home-section h1 {
   letter-spacing: 0.2rem;
   line-height: 3rem;
   width: 80%;
@@ -107,16 +108,16 @@ header hr {
   line-height: 2.2rem;
 }
 
-#homepage .section1 p {
+.home-section .section1 p {
   font-size: 1.5rem;
-  font-family: OpenSansL;
+  font-family: 'OpenSansL', sans-serif;
   letter-spacing: 0.05rem;
   line-height: 2.2rem;
 }
 
 /* projects-section */
 
-#projects-section {
+.projects-section {
   height: 300px;
   margin-top: 25%;
 }
@@ -133,14 +134,14 @@ header hr {
 }
 
 .projects-section__item h4 {
-  font-family: HelveticaNeue;
+  font-family: 'HelveticaNeue', sans-serif;
   font-size: 1.1rem;
   font-weight: 300;
   color: #F7F7F7;
 }
 
 .projects-section__item p {
-  font-family: HelveticaNeue;
+  font-family: 'HelveticaNeue', sans-serif;
   font-size: 1rem;
   color: #8F7E4F;
 }
@@ -176,6 +177,16 @@ header hr {
   transform: scale(1);
 }
 
+.slick-dots li.slick-active button:before {
+  opacity: .75;
+  color: #8F7E4F;
+}
+
+.slick-dots li button:before {
+  font-size: 10px;
+  color: #8F7E4F;
+}
+
 .projects-section__item--link {
   font-size: 1.2rem;
   color: #8F7E4F;
@@ -184,25 +195,87 @@ header hr {
 
 /* testimonials-section */
 
-#testimonials-section {
+.testimonials-section {
   margin-top: 33%;
   padding-top: 7%;
   background-color: #FDFDFD;
   height: 500px;
-  padding-bottom:10%;
+  padding-bottom: 10%;
 }
 
-.testimonials-section__heading p{
+.testimonials-section__heading p {
   color: #8F7E4F;
+  font-size: 0.9rem;
 }
 
-.testimonials-section__heading h4{
+.testimonials-section__heading h4 {
   color: #141414;
 }
 
-.testimonials-section__content p{
+.testimonials-section__content p {
   color: #141414;
+  font-family: 'OpenSansL', sans-serif;
+  
 }
+
+/* contact-section */
+
+.contact-section {
+  margin-top: 20%;
+  width: 100%;
+}
+
+.contact-section h2 {
+  font-family: 'Courgette', cursive;
+  font-size: 3rem;
+  color: #707070;
+}
+
+.contact-section__form input,
+.contact-section__form textarea,
+.contact-section__form button {
+  outline: none;
+  border: 0;
+}
+
+.contact-section__form button {
+  width: 95%;
+  margin-top: 2.5rem;
+  padding: 1rem 0;
+  border-radius: 15px;
+  background-color: #8F7E4F;
+}
+
+.contact-section__form input,
+.contact-section__form textarea {
+  width: 100%;
+  padding: 4rem 0 1rem 0;
+  border-bottom: 1px solid #8F7E4F;
+}
+
+.contact-section__form input::placeholder,
+.contact-section__form textarea::placeholder {
+  font-family: 'HelveticaNeue', sans-serif;
+  font-size: 1.1rem;
+}
+.contact-section__form input[name="Name"] {
+  padding-top:3rem;
+}
+/* footer */
+.footer{
+  margin-top:25%;
+}
+.footer__text a{
+  color: #8F7E4F;
+  font-size:1rem;
+}
+
+.footer__logo,
+.footer__copyright{
+  border-top: 1px solid #8F7E4F;
+}
+
+
 
 /* projectSection */
 
