--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,7 +114,7 @@ header .someIcons {
 }
 
 .home-section .section1 {
-  background-image: url('http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_591/v1532938063/genadi/homePage/genadi.png');
+  background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_591/v1532938063/genadi/homePage/genadi.png');
   background-size: cover;
 }
 
@@ -538,27 +538,27 @@ header .someIcons {
 }
 
 .projects__item1 {
-  background-image: url('http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888883/genadi/projectspage/mashmo_clothing_ecommerce.jpg');
+  background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888883/genadi/projectspage/mashmo_clothing_ecommerce.jpg');
 }
 
 .projects__item2 {
-  background-image: url('http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888814/genadi/projectspage/vasilena.jpg');
+  background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888814/genadi/projectspage/vasilena.jpg');
 }
 
 .projects__item3 {
-  background-image: url('http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888817/genadi/projectspage/personal_portfolio.png');
+  background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888817/genadi/projectspage/personal_portfolio.png');
 }
 
 .projects__item4 {
-  background-image: url('http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888818/genadi/projectspage/print_design.png');
+  background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888818/genadi/projectspage/print_design.png');
 }
 
 .projects__item5 {
-  background-image: url('http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888824/genadi/projectspage/logo_design.png');
+  background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888824/genadi/projectspage/logo_design.png');
 }
 
 .projects__item6 {
-  background-image: url('http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888817/genadi/projectspage/3d_design.jpg');
+  background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_700/v1533888817/genadi/projectspage/3d_design.jpg');
 }
 
 .projects__item--text {
@@ -725,7 +725,7 @@ header .someIcons {
   
   /* home section */
   .home-section .section1 {
-    background-image: url('http://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_800/v1532938063/genadi/homePage/genadi.png');
+    background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/c_scale,w_800/v1532938063/genadi/homePage/genadi.png');
   }
   .home-section__text {
     margin-left: 3rem;
@@ -900,7 +900,7 @@ header .someIcons {
 @media screen and (min-width: 900px) {
   /* ---------------------------- homepage ---------------------------- */
   .home-section .section1 {
-    background-image: url('http://res.cloudinary.com/dndvaqitq/image/upload/v1532938063/genadi/homePage/genadi.png');
+    background-image: url('https://res.cloudinary.com/dndvaqitq/image/upload/v1532938063/genadi/homePage/genadi.png');
   }
   /* ---------------------------- aboutpage ---------------------------- */
   .aboutpage__section2 {
