Fixing target-blank to all links

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,7 @@ html {
   font: 14px/21px 'OpenSansR', sans-serif;
   width: 100%;
   overflow-x: hidden;
+  touch-action: manipulation;
 }
 
 strong {
